fix(pinterest): icon colors more contrasted

--- a/styles/pinterest/catppuccin.user.css
+++ b/styles/pinterest/catppuccin.user.css
@@ -190,6 +190,11 @@
       }
     }
 
+    // Pin hover icons (and other icons)
+    .Uvi.gUZ.U9O.kVc {
+      color: @text;
+    }
+
     /* Header & Search */
 
     div[data-test-id="header-Header"] div.P_h span.xnr {
@@ -354,7 +359,7 @@
 
     // "Saved to __" popup text
     .tBJ.dyH.iFc.j1A.X8m.zDA.swG {
-      color: @text !important;
+      color: var(--color-text-light) !important;
     }
 
     /* Pin page */
@@ -455,11 +460,6 @@
 
     div[data-test-id="savedInfo"] a h3 {
       color: var(--color-text-light) !important;
-    }
-
-    // Profile icons
-    .Uvi.gUZ.U9O.kVc {
-      color: @text;
     }
 
     a[aria-label="More ideas"] {
